# fluid_scientist

./: .dockerignore  .env.docker.example  .env.example  .gitattributes  .gitignore  CODEX_HANDOFF_FROM_TRAE.md  CODEX_MODEL_NATIVE_REFACTOR_FROM_TRAE_MAIN.md  DELIVERY_REPORT.md  Dockerfile  FLUID_SCIENTIST_E2E_CAPABILITY_BOUNDARY_TEST_PLAN (1).md  FLUID_SCIENTIST_PRE_EXPERIMENT_FULL_CHAIN_TEST_PLAN.md  README.md  TRAE_MODEL_DRIVEN_SPEC_EDITING_REFACTOR_PLAN_V2.md  TRAE_PRESERVE_AND_MERGE_CURRENT_WORK_TO_MAIN.md  TRAE_REAL_WORKSTATION_FULL_E2E_AND_INTELLIGENCE_AUDIT_PLAN_V2.md  TRAE_SKILLS_ONLY_SELF_IMPLEMENTATION_INSTRUCTION.md  TRAE_TEST_CHECKER_ROOT_CAUSE_AND_REMEDIATION_PLAN.md  WORKFLOW_V2_CLOSURE_REPORT.md  WORKFLOW_V2_CURRENT_CALL_CHAIN.md  WORKFLOW_V2_FINAL_IMPLEMENTATION_REPORT.md  WORKFLOW_V2_GAP_ANALYSIS.md  WORKFLOW_V2_IMPLEMENTATION_REPORT.md  codex_v5_chat_openfoam_skills_simulation_master_plan.md  conftest.py  fluid_research_agent_design_reference.md  pyproject.toml  test_extended_v2.py  test_fault_injection.py  test_sqlite.py  v6新版方案.txt  workstation_manager.py  圆柱绕流场景.txt  新版改造方案.txt  新版本方案.txt  重构方案.txt
fluid_scientist_skill_pack_v1/fluid_scientist_skill_pack_v1/: README.md  TEST_REPORT.json  TRAE_INTEGRATION_PROMPT.md  pyproject.toml
fluid_scientist_skill_pack_v1/fluid_scientist_skill_pack_v1/fluid_skills/: __init__.py  registry.json
fluid_scientist_skill_pack_v1/fluid_scientist_skill_pack_v1/fluid_skills/runtime/: __init__.py  geometry.py  models.py  readiness.py  (+7 more)
fluid_scientist_skill_pack_v1/fluid_scientist_skill_pack_v1/tests/: test_skill_pack.py
(+975 files in other folders)
